   * New output of summary information and settings in JSON format in data directory file
     'summary.json.
   * Corrected case in polymorphism mode where failing consensus mutations could be  
     incorrectly predicted if a polymorphism was rejected. More thorough and consistent
     output of rejection information for RA evidence.
   * Fixed problem reading some FASTQ files (discovered on Nanopore data).
   * New options to use custom bowtie2 options for alignment. (Only intended for expert users!)
   * Removed extra slash in paths to invoke R scripts.
   * C++11 is now required for compilation. Optimization added to default compiler settings.
   * Fixed compatibility issues when compiling with certain versions of GCC.

Version 0.31.1
   * Critical fix for checking new bowtie2 versions with extra decimal place (e.g., 2.3.3.1).
   * Additional bug fixes for fitting coverage distribution.
   * Fix for `gdtools SUBTRACT` when using both polymorphism and consensus inputs.

Version 0.31.0
   * Fixed critical error that could give negative positions for mutations when a reference sequence 
     fragment was called as deleted.
   * Fixed several cases where fitting coverage distribution could fail or lead to a fatal error.

Version 0.30.2
   * Improved robustness of fitting coverage distribution and added fallbacks if fitting fails.
   * More information at the command line and on the HTML summary page about when insufficient 
     coverage leads to an entire reference sequence being called as deleted and when predictions 
     will be less reliable due to failure fitting the coverage distribution.
   * More detailed debugging information output for errors and crashes.

Version 0.30.1
   * Reports an error if Bowtie2 version 2.3.1 is used. Upgrade to a newer Bowtie2 version.
   * Command line options added to allow control over how reads are filtered.
   * Reads with length ≤18 are now ignored by default to avoid problematic memory usage associated 